--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,13 @@
 [[forms]]
   name = "driver-license-upload"
 
+# Redirect after successful form submission
+[[redirects]]
+  from = "/"
+  to = "/upload-success.html"
+  status = 302
+  conditions = {Query = {success = "true"}}
+
 [build.processing]
   skip_processing = false
 
