--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,9 @@
 [build]
   publish = "."
+  command = "echo 'Static site - no build required'"
 
 [[forms]]
   name = "driver-license-upload"
-
-# Redirect after successful form submission
-[[redirects]]
-  from = "/"
-  to = "/upload-success.html"
-  status = 302
-  conditions = {Query = {success = "true"}}
 
 [build.processing]
   skip_processing = false
